Ensure CSS is correct
In response to bug report that close button is misaligned on other button hover

--- a/chrome/special/windows_11_10.css
+++ b/chrome/special/windows_11_10.css
@@ -58,18 +58,16 @@
             
             :root[tabsintitlebar]:is(:not(:-moz-lwtheme), [lwt-default-theme-in-dark-mode]):not([sizemode="fullscreen"]) .titlebar-buttonbox:is(:hover, :hover:active)
             {
-
             opacity: 1 !important;
             }
-		.titlebar-button>.toolbarbutton-icon {
-			margin-top: -14px !important;
-			opacity: 0 !important;
-		}
-		.titlebar-close>.toolbarbutton-icon {
-			margin-top: -14px !important;
-			opacity: 1 !important;
-		}
-
+			.titlebar-button>.toolbarbutton-icon {
+				margin-top: -14px !important;
+				margin-right: 2px !important;
+				opacity: 0 !important;
+			}
+			.titlebar-close:hover>.toolbarbutton-icon {
+				opacity: 1 !important;
+			}
         }
     }
 
